--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
     padding: 12px 16px;
     background-color: #FF5959;
     border: none;
-    margin-top: 15px;
+    margin-top: 18px;
     font-size: 18px;
     font-weight: 900px;
     color: white;
@@ -63,7 +63,7 @@
     align-items: center;
     justify-content: space-evenly;
     gap: 10px;
-    margin-bottom: 22px;
+    margin: 25px 5px;
 }
 .price{
     background-color: #FAFAFA;
@@ -101,7 +101,7 @@
     justify-content: space-evenly;
     align-items: center;
     gap: 10px;
-    margin: 15px;
+    margin: 20px;
 }
 .card{  
     width: 400px;
@@ -136,7 +136,7 @@
     align-items: center;
 }
 .hope-img{
-    width: 55%;
+    width: 60%;
 }
 .hope-img img{
     width: 100%;
